--- a/client/css/sb-admin.css
+++ b/client/css/sb-admin.css
@@ -8,12 +8,12 @@
 
 body {
     margin-top: 100px;
-    background-color: #222;
+    background-color: #fff;
 }
 
 @media(min-width:768px) {
     body {
-        margin-top: 50px;
+        margin-top: 20px;
     }
 }
 
